Add linear kalman

--- a/SFRBX_GLONASS.ipynb
+++ b/SFRBX_GLONASS.ipynb
@@ -37,6 +37,56 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "N = 3\n",
+    "import numpy as np\n",
+    "B1 = np.zeros((1,N))\n",
+    "B2 = np.zeros((N, 1))\n",
+    "B3 = np.zeros(N)\n",
+    "U = 0\n",
+    "U1 = np.zeros(1)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-29T11:02:20.399825400Z",
+     "start_time": "2024-07-29T11:02:20.236818400Z"
+    }
+   },
+   "id": "df9a89da69f33203",
+   "execution_count": 2
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "matmul: Input operand 1 does not have enough dimensions (has 0, gufunc core with signature (n?,k),(k,m?)->(n?,m?) requires 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[4], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mB2\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m@\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mU\u001B[49m\n",
+      "\u001B[1;31mValueError\u001B[0m: matmul: Input operand 1 does not have enough dimensions (has 0, gufunc core with signature (n?,k),(k,m?)->(n?,m?) requires 1)"
+     ]
+    }
+   ],
+   "source": [
+    "B2 @ U"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-29T11:02:26.716882800Z",
+     "start_time": "2024-07-29T11:02:26.628958300Z"
+    }
+   },
+   "id": "122d0e7731a3504f",
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
     "# import pandas as pd\n",
     "# gpa = pd.read_csv('sfrbx_gps_alm.csv', index_col=0)\n",
     "# gpe = pd.read_csv('sfrbx_gps_eph.csv', index_col=0)\n",
