--- a/drawer.ipynb
+++ b/drawer.ipynb
@@ -2,14 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-08-12T06:03:28.073498900Z",
-     "start_time": "2024-08-12T06:03:28.053949400Z"
-    }
+    "is_executing": true
    },
    "outputs": [],
    "source": [
@@ -30,13 +27,10 @@
    ],
    "metadata": {
     "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-08-12T06:03:29.691565400Z",
-     "start_time": "2024-08-12T06:03:28.379564900Z"
-    }
+    "is_executing": true
    },
    "id": "adef0b79122144f1",
-   "execution_count": 310
+   "execution_count": null
   },
   {
    "cell_type": "code",
