Add filters LKF and FKF

--- a/drawer.ipynb
+++ b/drawer.ipynb
@@ -600,15 +600,69 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T17:09:11.993403Z",
-     "start_time": "2024-10-02T17:09:11.990549Z"
+     "end_time": "2024-10-04T11:56:23.668766Z",
+     "start_time": "2024-10-04T11:56:18.710261Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from collections import Counter\n",
+    "words = input().split(', ')\n",
+    "counter_of_words = Counter(words)\n",
+    "#most_counter_of_words = counter_of_words.most_common(3)\n",
+    "# sorted_counter_of_words = \n",
+    "# print(sorted_counter_of_words)\n",
+    "\n",
+    "for key, value in sorted(counter_of_words.items(), key=lambda line: line[1], reverse=True)[:3]:\n",
+    "    # if i != 3:\n",
+    "    print(f'{key}: {value}')\n",
+    "        # i += 1"
+   ],
+   "id": "69e59839951809ee",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "и: 5\n",
+      "дырка: 4\n",
+      "три: 3\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T12:11:44.386875Z",
+     "start_time": "2024-10-04T12:11:44.368299Z"
     }
    },
    "cell_type": "code",
    "source": "",
-   "id": "69e59839951809ee",
+   "id": "3b327f6f38f8eb4d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "",
+   "id": "6b6d6059b6c92e02"
   }
  ],
  "metadata": {
