--- a/serialized_drawer.ipynb
+++ b/serialized_drawer.ipynb
@@ -13,7 +13,6 @@
    "source": [
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
-    "import numpy as np\n",
     "from matplotlib.ticker import ScalarFormatter\n"
    ],
    "outputs": [],
@@ -76,7 +75,7 @@
    "cell_type": "code",
    "source": [
     "LLA = [55.692656, 37.771607, 130]\n",
-    "from Transformations import *\n",
+    "from Utils.Transformations import *\n",
     "XYZ = list(lla2ecef(*LLA))\n",
     "print(LLA)\n",
     "print(XYZ)\n",
